--- a/not-twitter-be/package.json
+++ b/not-twitter-be/package.json
@@ -7,9 +7,12 @@
     "dev": "nodemon  ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemon": "^3.1.9",
+    "pg": "^8.14.1"
   }
 }
