--- a/not-twitter-be/package.json
+++ b/not-twitter-be/package.json
@@ -11,6 +11,7 @@
     "connect-pg-simple": "^10.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.7",
     "express": "~4.16.1",
     "express-session": "^1.18.1",
     "morgan": "~1.9.1",
